<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voxel_mapping</name>
  <version>0.1.0</version>
  <description>A CUDA library for voxel mapping</description>
  <maintainer email="jorgen.fjermedal@hotmail.com">Jorgen Fjermedal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>spdlog</depend>
  <depend>fmt</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
